correctif wrap

--- a/morpion/style.css
+++ b/morpion/style.css
@@ -109,9 +109,7 @@ h1 {
   justify-items: center;
   align-items: start;
   min-width: 35%;
-  max-width: 85%;
-  white-space: nowrap;
-  overflow: hidden;
+  max-width: 80%;
 }
 
 #vic {
@@ -177,7 +175,7 @@ h1 {
 }
 
 .popReduce img {
-  animation: reduce 5.5s ease;
+  animation: reduce 10s ease;
 }
 
 /****************************************
@@ -272,11 +270,6 @@ select option {
 
   #nom {
     margin-bottom: 5px;
-  }
-
-  .isFinish {
-    white-space: wrap;
-    width: 80%;
   }
 }
 
@@ -406,7 +399,13 @@ select option {
   0% {
     transform: scale(1);
   }
-
+  15% {
+    transform: scale(0.9);
+  }
+  60% {
+    transform: scale(0);
+    opacity: 0;
+  }
   100% {
     transform: scale(0);
     opacity: 0;
